Graphand table alignment fix

--- a/src/app/data/data.component.css
+++ b/src/app/data/data.component.css
@@ -3,6 +3,8 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   background: #fff;
+  margin-left:20%;
+  margin-right:20%;
 }
 
 .card-header {
